<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_Roughing_Pumps" Id="{87120f5c-8975-4cdd-a125-ee85e558c6d5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Roughing_Pumps
VAR
	xOpenOK : BOOL;
	i_xExtILK_OK: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Roughing Valves *)

xOpenOK := F_TMO_RoughVRC_ILK( i_stISG := TMO_ROUGH1_GPI_02.PG, i_stBSG := TMO_ROUGH1_GPI_01.PG );
TMO_ROUGH1_VRC_01(i_xExtILK_OK := xOpenOK,i_xOverrideMode := xSystemOverrideMode_TMO );

xOpenOK := F_TMO_RoughVRC_ILK( i_stISG := TMO_ROUGH1_GPI_03.PG, i_stBSG := TMO_ROUGH1_GPI_01.PG );
TMO_ROUGH1_VRC_02(i_xExtILK_OK := xOpenOK,i_xOverrideMode := xSystemOverrideMode_TMO );

xOpenOK := F_TMO_RoughVRC_ILK( i_stISG := TMO_ROUGH2_GPI_02.PG, i_stBSG := TMO_ROUGH2_GPI_01.PG );
TMO_ROUGH2_VRC_01(i_xExtILK_OK := xOpenOK,i_xOverrideMode := xSystemOverrideMode_TMO );


PA1K4_IP1_PTM_01(i_xExtIlkOK :=, iq_stPTM => );
]]></ST>
    </Implementation>
    <LineIds Name="PRG_Roughing_Pumps">
      <LineId Id="24" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="3" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="26" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>